--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
     name: tulip
     runtime: go
     plan: free
+    region: ohio
     buildCommand: go build -tags netgo -ldflags '-s -w' -o app
     startCommand: ./app
     disk:
